gcc/testsuite/algol68/compile/error-widening-5.a68
# { dg-options "-fstropping=upper" }  #

BEGIN
   LONG INT d := 0; # { dg-error "coerced" }  #
   d
END
